// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entities exist, but the user is not in them 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Entities exist, but the user is not in them 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual exists, but their username is spelled with a different case 1`] = `
{
  "context": "Participation",
  "description": "@JANEdoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@JANEdoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=JANEdoetw&repo=console",
}
`;

exports[`Individual exists, but their username is spelled with a different case 2`] = `
{
  "context": "Participation",
  "description": "@JANEdoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@JANEdoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=JANEdoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in all workstreams, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in all workstreams, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in all workstreams, verified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in all workstreams, verified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in other workstreams but not that one, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in other workstreams but not that one, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in other workstreams but not that one, verified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates as an individual, but not in this workstream",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not chosen to participate in the Console workstream. To amend your agreement, submit a pull request to <a href="https://github.com/whatwg/participant-data">whatwg/participant-data</a>.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in other workstreams but not that one, verified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates as an individual, but not in this workstream",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not chosen to participate in the Console workstream. To amend your agreement, submit a pull request to <a href="https://github.com/whatwg/participant-data">whatwg/participant-data</a>.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in that particular workstream, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in that particular workstream, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw is not yet verified",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual, but has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individual, participating in that particular workstream, verified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individual, participating in that particular workstream, verified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw has signed up to participate as an individual",
  "isNothing": false,
  "longDescription": "@johndoetw has signed up to participate as an individual. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individuals exist, but the user is not one of them 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Individuals exist, but the user is not one of them 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Individuals exist, but the user is not one of them; it is an XSS attempt 1`] = `
{
  "context": "Participation",
  "description": "@<script>alert(1);</script> has not signed up to participate",
  "isNothing": true,
  "longDescription": "@&lt;script&gt;alert(1);&lt;/script&gt; does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=<script>alert(1);</script>&repo=console",
}
`;

exports[`Individuals exist, but the user is not one of them; it is an XSS attempt 2`] = `
{
  "context": "Participation",
  "description": "@<script>alert(1);</script> has not signed up to participate",
  "isNothing": true,
  "longDescription": "@&lt;script&gt;alert(1);&lt;/script&gt; does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=<script>alert(1);</script>&repo=console&pull=120",
}
`;

exports[`Multiple entities, all not in this workstream 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1 and contoso2 GitHub organizations, but they all do not participate in the Console workstream. Please have the contact for those organizations update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, all not in this workstream 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1 and contoso2 GitHub organizations, but they all do not participate in the Console workstream. Please have the contact for those organizations update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Multiple entities, all unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1 and contoso2 GitHub organizations, but they all have not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, all unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1 and contoso2 GitHub organizations, but they all have not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Multiple entities, one good option 1`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, one good option 2`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Multiple entities, one participating and one not 1`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, one participating and one not 2`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Multiple entities, one verified and one not 1`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, one verified and one not 2`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso 2",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, associated with Contoso 2, which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Multiple entities, participating one unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, but it does not participate in the Console workstream. Please have the contact for this organization update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Multiple entities, participating one unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso2 GitHub organization, but it does not participate in the Console workstream. Please have the contact for this organization update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`No data 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`No data 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw has not signed up to participate",
  "isNothing": true,
  "longDescription": "@johndoetw does not appear to have signed the agreement, or be associated with an entity that has done so. Please sign it, or forward it to an authorized representative!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Three entities 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1, contoso2, and contoso3 GitHub organizations, but they all do not participate in the Console workstream. Please have the contact for those organizations update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Three entities 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso1, contoso2, and contoso3 GitHub organizations, but they all do not participate in the Console workstream. Please have the contact for those organizations update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in all workstreams, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in all workstreams, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in all workstreams, verified 1`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso Ltd.",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, associated with Contoso Ltd., which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in all workstreams, verified 2`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso Ltd.",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, associated with Contoso Ltd., which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in other workstreams but not that one, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in other workstreams but not that one, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in other workstreams but not that one, verified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it does not participate in the Console workstream. Please have the contact for this organization update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in other workstreams but not that one, verified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of a non-workstream entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it does not participate in the Console workstream. Please have the contact for this organization update their participation agreement.",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in that particular workstream, unverified 1`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in that particular workstream, unverified 2`] = `
{
  "context": "Participation",
  "description": "@johndoetw participates on behalf of an unverified entity",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, but it has not yet been verified. Hold tight while we sort this out on our end!",
  "state": "pending",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;

exports[`Via entity, participating in that particular workstream, verified 1`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso Ltd.",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, associated with Contoso Ltd., which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console",
}
`;

exports[`Via entity, participating in that particular workstream, verified 2`] = `
{
  "context": "Participation",
  "description": "johndoetw participates on behalf of Contoso Ltd.",
  "isNothing": false,
  "longDescription": "@johndoetw is part of the contoso GitHub organization, associated with Contoso Ltd., which has signed the agreement and participates in the Console workstream. All is well; contribute at will!",
  "state": "success",
  "target_url": "https://participate.whatwg.org/agreement-status?user=johndoetw&repo=console&pull=120",
}
`;
